#481: Code clean-up